UI Code enhancement

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,5 @@ NEXT_PUBLIC_AZURE_AI_PROJECT_CONNECTION_STRING=AZURE_AI_AGENT_OR_PROJECT_URL
 NEXT_PUBLIC_AZURE_AI_AGENT_ID=YOUR_AZURE_AI_AGENT_ID
 
 NEXT_PUBLIC_AZURE_AI_API_KEY=YOUR_AZURE_API_KEY
+
+NEXT_PUBLIC_FILE_UPLOAD_FOLDER_NAME=LOCAL_FILE_UPLOAD_FOLDER_NAME
